Tweak sidebar colours and fix mobile overlapping issue

--- a/exabyte_theme/extra.css
+++ b/exabyte_theme/extra.css
@@ -139,15 +139,23 @@ p + pre, ul + pre {
     margin-top: 104px;
 }
 
+.wy-menu-vertical li ul li a {
+    color:#ddd;
+}
+
+.wy-menu-vertical li ul li a:hover {
+    background-color:rgba(255,255,255,0.1);
+}
+
 @media screen and (max-width: 768px) {
     .wy-nav-side.shift {
-        width:80%;
+        width:300px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .wy-nav-content-wrap.shift {
-        left: 80%;
+        left: 300px;
     }
 }
 
